--- a/public/staffs.html
+++ b/public/staffs.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-<!-- navbar -->
+	<!-- navbar -->
 	<!-- navbar -->
 	<div>
 		<nav>
@@ -76,19 +76,34 @@
 	</div>
 	<!-- Dropdownmenü -->
 	<div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
-  <div class="dropdown-content">
-    <a href="#">Network</a>
-    <a href="#">Databases</a>
-    <a href="#">Webdevelopment</a>
-  </div>
-  <!--Resultlist -->
-	<div>
-	<h1>Results for Network</h1>
+		<button onclick="toggle_dropdown()">Dropdown Subjekt Overview</button>
+		<div class="dropdown-content">
+			<h1>Course Overview</h1>
+				<ul>
+					<li><a href="#">Course</a>
+						<ul>
+							<li><a href="#">Mathematics</a></li>
+							<li><a href="#">Programming</a></li>
+							<li><a href="#">Computer Networks</a></li>
+							<li><a href="#">Operating Systems</a></li>
+							<li><a href="#">Software Engineering</a></li>
+							<li><a href="#">Databanks</a></li>
+							<li><a href="#">Webdevelopment</a></li>
+						</ul></li>
+
+				</ul>
+		</div>
+		<!--Resultlist -->
+		<div>
+			<h1>Results for Dropdown</h1>
+			<ul>
+			<li>Student1</li>
+			<li>Student2</li>
+			</ul>
+		</div>
+
+
 	</div>
-  
-  
-</div>
 
 
 	<script type="text/javascript" src="./misc.js"></script>
