flavicon added on all pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Login</title>
+<link rel="icon" type="image/x-icon" href="public/favicon.ico">
 <link rel="stylesheet" href="public/styles.css">
 <script type="text/javascript"></script>
 
