--- a/public/students.html
+++ b/public/students.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Students</title>
+<link rel="icon" type="image/x-icon" href="./favicon.ico">
 <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
