added table css next step get it out of JASON

--- a/public/students.html
+++ b/public/students.html
@@ -19,7 +19,7 @@
 
 	<!-- List Students -->
 	<div>
-		<table>
+		<table id="StudentTable">
 			<tr>
 				<td>ID</td>
 				<td>First_Name</td>
@@ -28,6 +28,7 @@
 				<td>Gender</td>
 				<td>Department</td>
 				<td>Email_ID</td>
+				<td>DOE</td>
 			</tr>
 			<tr>
 				<td>01</td>
@@ -78,5 +79,6 @@
 		</form>
 	</div>
 	<script type="text/javascript" src="./misc.js"></script>
+	<script type="text/javascript" src="./dataPrea.js"></script>
 </body>
 </html>
