--- a/public/students.html
+++ b/public/students.html
@@ -6,7 +6,7 @@
 <link rel="icon" type="image/x-icon" href="./favicon.ico">
 <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
+<body onload = "getTab()">
 	<!-- navbar -->
 	<div>
 		<nav>
@@ -16,7 +16,20 @@
 			</ul>
 		</nav>
 	</div>
-
+	<!-- Dropdown dep-->
+	<div class="dropdown">
+		<button class="dropbtn">Department</button>
+		<div class="dropdown-content">
+			<a href="#"onclick="test()">It</a> <a href="#">Math</a> <a href="#">Bio</a>
+		</div>
+	</div>
+		<!-- Dropdown Semester -->
+	<div class="dropdown">
+		<button class="dropbtn">Semester</button>
+		<div class="dropdown-content">
+			<a href="#">Sommer</a> <a href="#">Winter</a> 
+		</div>
+	</div>
 	<!-- List Students -->
 	<div>
 		<table id="StudentTable">
@@ -64,7 +77,7 @@
 			<input type="text" id="First_Name" name="First_Name"> <label
 				for="Last_Name">Last_Name</label> <input type="text" id="Last_Name"
 				name="Last_Name"> <label for="DOB">DOB</label> <input
-				type="text" id="DOB" name="DOB"> <a>Gender</a> <label
+				type="date" id="DOB" name="DOB" max="2022-05-11"> <a>Gender</a> <label
 				for="Female">Female</label> <input type="radio" id="Female"
 				name="Gender" value="Female"> <label for="Men">Men</label> <input
 				type="radio" id="Men" name="Gender" value="Male"> <label
@@ -78,7 +91,8 @@
 				value="Submit">
 		</form>
 	</div>
-	<script type="text/javascript" src="./misc.js"></script>
-	<script type="text/javascript" src="./dataPrea.js"></script>
+	<script  src="./misc.js"></script>
+	<script  src="./dataPrea.js"></script>
+
 </body>
 </html>
