added filter prototyp

--- a/public/students.html
+++ b/public/students.html
@@ -20,7 +20,7 @@
 	<div class="dropdown">
 		<button class="dropbtn">Department</button>
 		<div class="dropdown-content">
-			<a href="#"onclick="test()">It</a> <a href="#">Math</a> <a href="#">Bio</a>
+			<a href="#"onclick="genTabDepFiltered()">It</a> <a href="#">Math</a> <a href="#">Bio</a>
 		</div>
 	</div>
 		<!-- Dropdown Semester -->
