--- a/public/students.html
+++ b/public/students.html
@@ -20,6 +20,7 @@
 	<div class="dropdown">
 		<button class="dropbtn">Department</button>
 		<div class="dropdown-content">
+		<a href="#"onclick="getTab()">----</a>
 			<a href="#"onclick="genTabDepFilteredIT()">It</a> <a href="#"onclick="genTabDepFilteredMath()">Math</a> <a href="#" onclick="genTabDepFilteredBio()">Bio</a>
 		</div>
 	</div>
@@ -33,34 +34,6 @@
 	<!-- List Students -->
 	<div>
 		<table id="StudentTable">
-			<tr>
-				<td>ID</td>
-				<td>First_Name</td>
-				<td>Last_Name</td>
-				<td>DOB</td>
-				<td>Gender</td>
-				<td>Department</td>
-				<td>Email_ID</td>
-				<td>DOE</td>
-			</tr>
-			<tr>
-				<td>01</td>
-				<td>Student</td>
-				<td>Dummy</td>
-				<td>1.1.1998</td>
-				<td>female</td>
-				<td>Dep1</td>
-				<td>Email_ID</td>
-			</tr>
-			<tr>
-				<td>02</td>
-				<td>Student</td>
-				<td>Dummy2</td>
-				<td>1.1.1998</td>
-				<td>male</td>
-				<td>Dep1</td>
-				<td>Email_ID</td>
-			</tr>
 		</table>
 	</div>
 	<!--Control panel-->
