--- a/public/students.html
+++ b/public/students.html
@@ -50,7 +50,7 @@
 			<input type="text" id="First_Name" name="First_Name"> <label
 				for="Last_Name">Last_Name</label> <input type="text" id="Last_Name"
 				name="Last_Name"> <label for="DOB">DOB</label> <input
-				type="date" id="DOB" name="DOB" max="2022-05-11"> <a>Gender</a> <label
+				type="date" onchange="console" id="DOB" name="DOB" > <a>Gender</a> <label
 				for="Female">Female</label> <input type="radio" id="Female"
 				name="Gender" value="Female"> <label for="Men">Men</label> <input
 				type="radio" id="Men" name="Gender" value="Male"> <label
@@ -62,6 +62,9 @@
 			</select> <label for="Email_ID">Email_ID</label> <input type="email"
 				id="Email_ID" name="Email_ID"> <input type="submit"
 				value="Submit">
+			    <script type="text/javascript">
+       DOB.max = new Date().toISOString().split("T")[0];
+    </script>
 		</form>
 	</div>
 	<script  src="./misc.js"></script>
